# JGui

./: .gitignore  CMakeLists.txt  README.md
src/: Button.h  Component.h  JGui.h  main.cpp
src/Components/: Button.h  Label.h
